syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tanzu.streaming.runtime.processor.common.proto";

message GrpcPayloadCollection {
  repeated bytes payload = 1;
}
